--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "geist": "^1.3.0",
     "motion": "^12.4.7",
     "next": "^15.0.1",
+    "next-view-transitions": "^0.3.4",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
